# ShaderGen

./: .appveyor.yml  .travis.yml  CMakeLists.txt  License.txt  ShaderGen.pro  changelog.md  configure  readme.md  readme.txt
.github/workflows/: ccpp.yml
installer/linux/: generate.sh  shadergen.desktop
installer/osx/: generate.sh
installer/win/: GLSL ShaderGen.iss
source/: AboutDialog.cpp  AboutDialog.h  App.cpp  App.h  CMakeLists.txt  Compulsory.h  IdentityTable.h  Info.plist  QCodeEditor.cpp  QCodeEditor.h  QColorButton.cpp  QColorButton.h  QVectorEdit.cpp  QVectorEdit.h  SGCanvas.cpp  SGCanvas.h  SGCanvasMouseHandler.cpp  SGCanvasMouseHandler.h  SGCanvasWrapper.cpp  SGCanvasWrapper.h  SGFixedGLState.cpp  SGFixedGLState.h  SGFrame.cpp  SGFrame.h  SGModels.cpp  SGModels.h  SGOglFogNBPage.cpp  SGOglFogNBPage.h  SGOglLightNBPage.cpp  SGOglLightNBPage.h  SGOglMaterialNBPage.cpp  SGOglMaterialNBPage.h  SGOglNotebook.cpp  SGOglNotebook.h  SGOglTextureCoordNBPage.cpp  SGOglTextureCoordNBPage.h  SGOglTextureEnvNBPage.cpp  SGOglTextureEnvNBPage.h  SGShaderGenerator.cpp  SGShaderGenerator.h  (+20 more)
vs/: ffsd.rc  resource.h
